fixed typo for section timeline number

--- a/Proposal_report_Amir_ACM.tex
+++ b/Proposal_report_Amir_ACM.tex
@@ -205,7 +205,7 @@ Legal issues & X.Org \& XFree\\
 \end{figure}
 
 This proposal report is organized as follows: Section \ref{relatedwork} presents related literature on open source social communities, the gap in the literature, and discusses why the issue needs to be studied. 
-Then, Section \ref{ResearchGoals} presents our research objective and research questions. After that, in section \ref{methodology} presents how data gathering, statistical modeling, and qualitative analysis are proposed to be done, as well as our initial hypotheses. In section \ref{sectionInitialStudy}, we present results of our initial study. Section \ref{timeline}, shows the proposed timeline for the research and the author's graduation. And lastly, section \ref{threatsToValidity} we discuss the threats to validity.\\
+Then, Section \ref{ResearchGoals} presents our research objective and research questions. After that, in section \ref{methodology} presents how data gathering, statistical modeling, and qualitative analysis are proposed to be done, as well as our initial hypotheses. In section \ref{sectionInitialStudy}, we present results of our initial study. Section \ref{timelineSection}, shows the proposed timeline for the research and the author's graduation. And lastly, section \ref{threatsToValidity} we discuss the threats to validity.\\
 
 \section{Related Work}
 \label{relatedwork}
@@ -451,7 +451,7 @@ We may explain U.F. forked projects because of ``more community-driven developme
 
 \subsubsection{The statistical model}
 \label{statisticalModel}
-A recent method for population-process approach is exponential family random graph models (ERGM) \cite{Robins}, in which, the possible edges between nodes of a graph are regarded as random variables. Assumptions about dependencies among these random variables determine the form of the ERGM model for the network. The model parameters are estimated using the observed network, which in turn, can be used to interpret the underlying processes that generated the observed network. For example, we can infer whether a model parameter is significantly different from zero, and hence, whether the characteristic seen in the observed network is more or less likely than expected by chance.
+A recent method for population-process approach is exponential family random graph models (ERGM) \cite{Robins}, in which, the possible edges between nodes of a graph are regarded as random variables. Assumptions about dependencies among these random variables determine the form of the ERGM model for the network. The model parameters are estimated using the observed network, which in turn, can be used to interpret the underlying processes that generated the observed network. For example, we can infer whether a model parameter's effect is significantly different from zero, and hence, whether the characteristic seen in the observed network is more or less likely than expected by chance.
 
 The general form of the exponential family random graph models is \cite{Krivitsky}: 
 
@@ -654,7 +654,7 @@ Data collection for mailing list archives is completed. The issue tracking syste
 We expect to find patterns specific to each category, which then may be used to identify early warning signs of forking. The identification of such measures may inform those who are interested in the sustainability of their project community to stay informed and take action to amend undesirable dynamics. 
 
 \section{Timeline}
-\label{timeline}
+\label{timelineSection}
 
 Table \ref{timeline} outlines my proposed research timeline. It also shows the mapping between research questions and the phases of the study.
 
