updated title, November 2 2015

--- a/Proposal_report_Amir_ACM.tex
+++ b/Proposal_report_Amir_ACM.tex
@@ -43,7 +43,7 @@
 
 \begin{document}
 
-\title{Temporal Analysis of Dynamic Collaboration Graphs of Open Source Software Development: Forking}
+\title{Longitudinal Analysis of Collaboration Graphs of Forked Open Source Software Development Projects}
 
 %\subtitle{[Extended Abstract]
 %\titlenote{A full version of this paper is available as
@@ -92,11 +92,11 @@
 %
 % 1st. author
 \alignauthor
-Amir Azarbakht\\
+Amirhosein (Emerson) Azarbakht\\
        \affaddr{School of Electrical Engineering and Computer Science}\\
 	   \affaddr{Oregon State University}\\
 	   \affaddr{Corvallis, Oregon}\\
-       \email{azarbaam@eecs.oregonstate.edu}
+       \email{azarbaka@eecs.oregonstate.edu}
 % 2nd. author
 %\alignauthor
 %G.K.M. Tobin\titlenote{The secretary disavows
